# lab-exp-dsp-ia-mpu-forwarder

./: CMakeLists.txt
main/: CMakeLists.txt  main.c
model-parameters/: model_metadata.h  model_variables.h
mpu-data-forwarding/: CMakeLists.txt
pico-edge/: main.cpp
source/: CMakeLists.txt  main.cpp
tflite-model/: tflite_learn_6_compiled.cpp  tflite_learn_6_compiled.h
